--- a/kubernetes/kafka.yml
+++ b/kubernetes/kafka.yml
@@ -34,8 +34,8 @@ spec:
     spec:
       containers:
         - name: kafka-container
-          image: tode/kafka-kraft:3.3.1
-          imagePullPolicy: Always
+          image: tode/kafka-kraft:3.5.0
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 9092
             - containerPort: 9093
